# qwen-lora-project

./: .gitignore  .ignore  README.md  README_CN.md  main.py  pyproject.toml  train_qwen_lora.py
configs/: ds_zero2.json  ds_zero3.json
data_l3/: val.jsonl
deployments/gguf/qwen7b-text2sql-merged/: config.json  generation_config.json
docs/: primary-plan.md
function_calling/: demo.py
outputs/: baselines.jsonl  text2sql_eval_strong_l5_100_clean_noj_pp_sd.json
outputs/text2sql/adapters/l5-best/: README.md  adapter_config.json
outputs/text2sql/evals/: n15_pp_sd.json
outputs/text2sql/training_logs/: l5_loss_history.json
scripts/: eval_text2sql.py  evaluate.py  judge.py  launch_multi.sh  launch_single.sh  llama_api_server.py  merge_lora.py  plot_loss.py  prepare_data.py  prepare_mixed_data.py  prepare_text2sql_data.py
